--- a/package.json
+++ b/package.json
@@ -1,4 +1,93 @@
 {
-  "name": "design-system",
-  "packageManager": "yarn@4.1.1"
+  "name": "@siteed/design-system",
+  "packageManager": "yarn@4.1.1",
+  "scripts": {
+    "clean": "rimraf ./dist",
+    "build": "yarn build:rollup",
+    "build:tsc": "tsc",
+    "storybook": "storybook dev -p 6060",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@pchmn/expo-material3-theme": "^1.3.2",
+    "i18n-js": "^4.4.3",
+    "intl-pluralrules": "^2.0.1",
+    "react-i18next": "^14.1.0"
+  },
+  "peerDependencies": {
+    "@gorhom/bottom-sheet": "*",
+    "@siteed/react-native-confirm": "*",
+    "@siteed/react-native-logger": "*",
+    "@siteed/react-native-toaster": "*",
+    "react": "*",
+    "react-native": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-paper": "*",
+    "react-native-vector-icons": "*"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-react": "^7.24.1",
+    "@chromatic-com/storybook": "^1.2.25",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@evilmartians/lefthook": "^1.6.7",
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native-community/slider": "^4.5.0",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@siteed/react-native-confirm": "^0.4.0",
+    "@siteed/react-native-logger": "^0.4.0",
+    "@siteed/react-native-toaster": "^0.6.0",
+    "@storybook/addon-essentials": "^8.0.4",
+    "@storybook/addon-interactions": "^8.0.4",
+    "@storybook/addon-links": "^8.0.4",
+    "@storybook/addon-onboarding": "^8.0.4",
+    "@storybook/addon-react-native-web": "^0.0.23",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.0.4",
+    "@storybook/react": "^8.0.4",
+    "@storybook/react-native": "^7.6.17",
+    "@storybook/react-webpack5": "^8.0.4",
+    "@storybook/test": "^8.0.4",
+    "@svgr/webpack": "^8.1.0",
+    "@testing-library/react-native": "^12.4.4",
+    "@types/jest": "^29.5.12",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-test-renderer": "^18",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "commitlint": "^19.2.1",
+    "expo": "^50.0.14",
+    "expo-clipboard": "^5.0.1",
+    "expo-localization": "^14.8.3",
+    "i18next": "^23.10.1",
+    "os-browserify": "^0.3.0",
+    "prop-types": "^15.8.1",
+    "react-native": "^0.73.6",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-jazzicon": "^0.1.2",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "^0.19.10",
+    "react-test-renderer": "^18.2.0",
+    "storybook": "^8.0.4",
+    "tty-browserify": "^0.0.1",
+    "typescript": "^5.4.3"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
