--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,18 @@
 {
   "search.exclude": {
     "**/.yarn": true,
-    "**/.pnp.*": true
-  }
+    "**/.pnp.*": true,
+    "**/node_modules": true,
+    "**/dist": true,
+  },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.rollup.cache/": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/dist": true,
+  },
 }
