--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "@siteed/design-system",
+  "version": "0.1.0",
   "packageManager": "yarn@4.1.1",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/dist/src/index.d.ts",
+  "sideEffects": false,
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "scripts": {
     "clean": "rimraf ./dist",
+    "build:rollup": "yarn clean && rollup -c --bundleConfigAsCjs",
     "build": "yarn build:rollup",
     "build:tsc": "tsc",
     "storybook": "storybook dev -p 6060",
@@ -19,6 +29,8 @@
     "@siteed/react-native-confirm": "*",
     "@siteed/react-native-logger": "*",
     "@siteed/react-native-toaster": "*",
+    "@expo/vector-icons": "*",
+    "@expo": "*",
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": "*",
@@ -63,6 +75,7 @@
     "@types/jest": "^29.5.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18",
+    "@types/rollup-plugin-peer-deps-external": "^2",
     "babel-loader": "^9.1.3",
     "babel-plugin-react-native-web": "^0.19.10",
     "commitlint": "^19.2.1",
@@ -82,6 +95,16 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
     "react-test-renderer": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.13.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-copy-assets": "^2.0.3",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-img": "^1.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "storybook": "^8.0.4",
     "tty-browserify": "^0.0.1",
     "typescript": "^5.4.3"
