feat: eslint setup

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build:rollup": "yarn clean && rollup -c --bundleConfigAsCjs",
     "build": "yarn build:rollup",
     "build:tsc": "tsc",
+    "lint": "eslint . --cache \"src/**/*.{js,ts,tsx}\"",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
+    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
     "storybook": "storybook dev -p 6060",
     "build-storybook": "storybook build"
   },
@@ -25,12 +28,11 @@
     "react-i18next": "^14.1.0"
   },
   "peerDependencies": {
+    "@expo/vector-icons": "*",
     "@gorhom/bottom-sheet": "*",
     "@siteed/react-native-confirm": "*",
     "@siteed/react-native-logger": "*",
     "@siteed/react-native-toaster": "*",
-    "@expo/vector-icons": "*",
-    "@expo": "*",
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": "*",
@@ -72,13 +74,18 @@
     "@storybook/test": "^8.0.4",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react-native": "^12.4.4",
+    "@types/eslint": "^8",
     "@types/jest": "^29.5.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18",
     "@types/rollup-plugin-peer-deps-external": "^2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-react-native-web": "^0.19.10",
     "commitlint": "^19.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "expo": "^50.0.14",
     "expo-clipboard": "^5.0.1",
     "expo-localization": "^14.8.3",
