--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@siteed/design-system",
   "version": "0.1.0",
+  "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
+  "license": "MIT",
+  "repository": "https://github.com/deeeed/design-system",
   "packageManager": "yarn@4.1.1",
   "module": "dist/esm/index.js",
+  "source": "src/index",
   "types": "dist/esm/dist/src/index.d.ts",
   "sideEffects": false,
   "files": [
@@ -15,11 +19,13 @@
     "build:rollup": "yarn clean && rollup -c --bundleConfigAsCjs",
     "build": "yarn build:rollup",
     "build:tsc": "tsc",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --cache \"src/**/*.{js,ts,tsx}\"",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
     "storybook": "storybook dev -p 6060",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "release-it"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
@@ -102,6 +108,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
     "react-test-renderer": "^18.2.0",
+    "release-it": "^17.1.1",
     "rimraf": "^5.0.5",
     "rollup": "^4.13.0",
     "rollup-plugin-copy": "^3.5.0",
