--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint . --cache \"src/**/*.{js,ts,tsx}\"",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
+    "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
     "build-storybook": "storybook build",
     "release": "release-it"
@@ -67,6 +68,7 @@
     "@siteed/react-native-confirm": "^0.4.0",
     "@siteed/react-native-logger": "^0.4.0",
     "@siteed/react-native-toaster": "^0.6.0",
+    "@size-limit/preset-big-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.0.4",
     "@storybook/addon-interactions": "^8.0.4",
     "@storybook/addon-links": "^8.0.4",
@@ -89,6 +91,7 @@
     "@typescript-eslint/parser": "^7.3.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-react-native-web": "^0.19.10",
+    "bundle-size": "^1.1.5",
     "commitlint": "^19.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
@@ -119,6 +122,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "size-limit": "^11.1.2",
     "storybook": "^8.0.4",
     "tty-browserify": "^0.0.1",
     "typescript": "^5.4.3"
