--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "packageManager": "yarn@4.1.1",
   "module": "dist/esm/index.js",
   "source": "src/index",
-  "types": "dist/esm/dist/src/index.d.ts",
+  "types": "dist/esm/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
