--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
-  "private": true,
-  "name": "@siteed/design-monorepo",
-  "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
-  "packageManager": "yarn@4.1.1",
-  "license": "MIT",
-  "scripts": {},
-  "workspaces": [
-    "packages/*"
-  ]
+  "name": "design-system",
+  "packageManager": "yarn@4.1.1"
 }
