--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,8 @@
 # In that case, don't forget to run `yarn config set enableGlobalCache false`!
 # Documentation here: https://yarnpkg.com/features/caching#zero-installs
 
+**/node_modules/
+node_modules/
+
 #!.yarn/cache
 .pnp.*
