--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
-  "name": "design-system",
-  "packageManager": "yarn@4.1.1"
+  "name": "@siteed/mobile",
+  "packageManager": "yarn@4.1.1",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
