--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -4,7 +4,7 @@
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
   "repository": "https://github.com/deeeed/design-system",
-  "packageManager": "yarn@4.1.1",
+  "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "source": "src/index",
   "types": "dist/esm/index.d.ts",
