--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+# Yarn
 
 # Swap the comments on the following lines if you wish to use zero-installs
 # In that case, don't forget to run `yarn config set enableGlobalCache false`!
@@ -14,3 +15,5 @@ node_modules/
 
 #!.yarn/cache
 .pnp.*
+**/dist/
+**/build/
