--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -9,7 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@siteed/design-system": "^0.3.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@siteed/design-system": "workspace:*",
+    "@siteed/react-native-confirm": "^0.4.0",
+    "@siteed/react-native-logger": "^0.4.0",
+    "@siteed/react-native-toaster": "^0.6.0",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
@@ -18,8 +23,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
