--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@siteed/design-system": "*",
+    "@siteed/design-system": "^0.3.3",
     "@siteed/react-native-confirm": "^0.4.0",
     "@siteed/react-native-logger": "^0.4.0",
     "@siteed/react-native-toaster": "^0.6.0",
