feat: new version

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": "https://github.com/deeeed/design-system",
   "main": "dist/index.js",
-  "module": "dist/esm/index.js",
+  "module": "dist/index.js",
   "source": "src/index",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -40,6 +40,9 @@
     "@siteed/react-native-confirm": "*",
     "@siteed/react-native-logger": "*",
     "@siteed/react-native-toaster": "*",
+    "expo": "*",
+    "expo-localization": "*",
+    "i18next": "*",
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": "*",
