--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@siteed/design-system": "^0.3.3",
+    "@siteed/design-system": "^0.3.15",
     "@siteed/react-native-confirm": "^0.4.0",
     "@siteed/react-native-logger": "^0.4.0",
     "@siteed/react-native-toaster": "^0.6.0",
@@ -34,6 +34,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.1.3"
   },
   "private": true
