--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@siteed/design-system": "^0.3.15",
+    "@siteed/design-system": "workspace:^",
     "@siteed/react-native-confirm": "^0.4.0",
     "@siteed/react-native-logger": "^0.4.0",
     "@siteed/react-native-toaster": "^0.6.0",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
+    "expo-localization": "~14.8.3",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "i18next": "^23.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
