feat: overall design improvements

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "**/react-native/**"
   ],
   "devDependencies": {
+    "prettier": "^3.2.5",
     "typescript": "^5.4.3"
   },
   "packageManager": "yarn@4.1.1"
