--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -105,6 +105,7 @@
     "i18next": "^23.10.1",
     "os-browserify": "^0.3.0",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-jazzicon": "^0.1.2",
