feat: themed view

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -40,6 +40,7 @@
     "@siteed/react-native-confirm": "*",
     "@siteed/react-native-logger": "*",
     "@siteed/react-native-toaster": "*",
+    "@react-navigation/native": "*",
     "expo": "*",
     "expo-localization": "*",
     "i18next": "*",
@@ -61,6 +62,7 @@
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/slider": "^4.5.0",
+    "@react-navigation/native": "^6.1.17",
     "@release-it/conventional-changelog": "^8.0.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^22.0.1",
