--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client --port 7765",
+    "android": "expo run:android --port 7765",
+    "ios": "expo run:ios --device --port 7765",
+    "web": "expo start --web --port 7765"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
