--- a/examples/expoapp/app.json
+++ b/examples/expoapp/app.json
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.deeeed.expoapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.deeeed.expoapp"
     },
     "web": {
       "favicon": "./assets/favicon.png",
