--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start --dev-client --port 7765",
     "android": "expo run:android --port 7765",
-    "ios": "expo run:ios --device --port 7765",
+    "ios": "expo run:ios --port=7765  --device",
     "web": "expo start --web --port 7765"
   },
   "dependencies": {
