--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -99,13 +99,16 @@
     "bundle-size": "^1.1.5",
     "commitlint": "^19.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "expo": "^50.0.14",
     "expo-clipboard": "^5.0.1",
     "expo-localization": "^14.8.3",
     "i18next": "^23.10.1",
     "os-browserify": "^0.3.0",
+    "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-native": "0.73.6",
