--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -3,7 +3,11 @@
   "version": "0.6.3",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
-  "repository": "https://github.com/deeeed/design-system",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deeeed/mobile-framework",
+    "directory": "packages/design-system"
+  },
   "main": "dist/index.js",
   "module": "dist/index.js",
   "source": "src/index",
