--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@gorhom/bottom-sheet": "^4.6.1",
+    "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
     "@siteed/design-system": "*",
-    "@siteed/react-native-logger": "^0.6.0",
+    "@siteed/react-native-logger": "0.6.0",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
@@ -20,8 +20,8 @@
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.10.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
@@ -29,11 +29,11 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "^0.19.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "^18.3.1",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
