--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -89,6 +89,7 @@
     "@testing-library/react-native": "^12.4.4",
     "@types/eslint": "^8",
     "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18",
     "@types/rollup-plugin-peer-deps-external": "^2",
@@ -109,7 +110,8 @@
     "os-browserify": "^0.3.0",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-jazzicon": "^0.1.2",
