--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -72,7 +72,7 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@siteed/react-native-logger": "^0.6.0",
+    "@siteed/react-native-logger": "workspace:^",
     "@size-limit/preset-big-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.0.4",
     "@storybook/addon-interactions": "^8.0.4",
