--- a/packages/react-native-logger/example/package.json
+++ b/packages/react-native-logger/example/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@siteed/react-native-logger": "^0.6.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
