--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -20,8 +20,8 @@
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.10.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.1",
+    "@types/react": "~18.2.45",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
