--- a/packages/design-system/tsconfig.eslint.json
+++ b/packages/design-system/tsconfig.eslint.json
@@ -8,6 +8,8 @@
     "./src",
     "./*.js",
     "./*.mjs",
+    "./plugin/**/*.ts",
+    "./app.plugin.js",
     ".eslintrc.js",
     ".storybook/main.ts",
     ".storybook/preview.tsx",
