--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expoapp",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "src/index",
   "scripts": {
     "start": "expo start --dev-client --port 7765",
     "android": "expo run:android --port 7765",
@@ -20,6 +20,7 @@
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.10.1",
+    "intl-pluralrules": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
