--- a/examples/expoapp/package.json
+++ b/examples/expoapp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
+    "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "expo": "~50.0.14",
