--- a/examples/designdemo/app.json
+++ b/examples/designdemo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expoapp",
-    "slug": "expoapp",
+    "name": "designdemo",
+    "slug": "designdemo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,7 +17,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.deeeed.expoapp"
+      "bundleIdentifier": "com.deeeed.designdemo"
     },
     "android": {
       "adaptiveIcon": {
