--- a/examples/designdemo/ios/designdemo/Info.plist
+++ b/examples/designdemo/ios/designdemo/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>expoapp</string>
+    <string>designdemo</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>expoapp</string>
-          <string>com.deeeed.expoapp</string>
+          <string>com.deeeed.designdemo</string>
         </array>
       </dict>
     </array>
