--- a/examples/designdemo/tsconfig.json
+++ b/examples/designdemo/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@siteed/design-system": ["../../packages/design-system/src/index"],
+    }
   }
 }
