--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/design-system",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
   "repository": {
@@ -8,10 +8,10 @@
     "url": "https://github.com/deeeed/mobile-framework",
     "directory": "packages/design-system"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.js",
   "source": "src/index",
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
@@ -30,7 +30,7 @@
     "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
     "build-storybook": "storybook build",
-    "release": "yarn build && release-it"
+    "release": "echo DISABLED in monoreo use npm publish instead"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
