--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/design-system",
-  "version": "0.7.5",
+  "version": "0.7.6",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
   "repository": {
@@ -30,7 +30,7 @@
     "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
     "build-storybook": "storybook build",
-    "release": "echo DISABLED in monoreo use npm publish instead"
+    "release": "yarn build && npm release"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
