--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "**/react-native/**"
   ],
   "devDependencies": {
+    "lefthook": "^1.7.2",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
   },
