--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,7 +30,7 @@
     "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
     "build-storybook": "storybook build",
-    "release": "yarn build && npm publish"
+    "release": "yarn clean && yarn build && npm publish"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
