--- a/examples/designdemo/ios/designdemo/Info.plist
+++ b/examples/designdemo/ios/designdemo/Info.plist
@@ -51,7 +51,7 @@
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
-      <string>armv7</string>
+      <string>arm64</string>
     </array>
     <key>UIRequiresFullScreen</key>
     <false/>
