--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start --dev-client --port 7765",
     "android": "expo run:android --port 7765",
-    "ios": "expo run:ios --port=7765  --device",
+    "ios": "expo run:ios --port 7765  --device",
     "web": "expo start --web --port 7765"
   },
   "dependencies": {
@@ -14,22 +14,22 @@
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.5",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "~14.8.3",
-    "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.20",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-router": "~3.5.18",
+    "expo-status-bar": "~1.12.1",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.11"
   },
@@ -39,7 +39,7 @@
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
