--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteed/mobile-framework",
+  "name": "@siteed/universe",
   "workspaces": [
     "packages/*",
     "examples/*"
@@ -14,5 +14,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.3.1",
+  "dependencies": {
+    "@siteed/react-native-logger": "workspace:^"
+  }
 }
