--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -53,6 +53,7 @@
     "react-native-vector-icons": "*"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-react": "^7.24.1",
     "@chromatic-com/storybook": "^1.2.25",
