--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -2,11 +2,11 @@
   "name": "@siteed/react-native-logger",
   "version": "0.7.2",
   "description": "Simple logger to wrap console and keep track of latest logs",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
+  "main": "lib/commonjs/logger",
+  "module": "lib/module/logger",
+  "types": "lib/typescript/logger.d.ts",
+  "react-native": "src/logger",
+  "source": "src/logger",
   "files": [
     "src",
     "lib",
@@ -53,6 +53,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.8",
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
@@ -63,8 +64,10 @@
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "^18.3.1",
