--- a/examples/designdemo/ios/designdemo/Info.plist
+++ b/examples/designdemo/ios/designdemo/Info.plist
@@ -19,7 +19,7 @@
     <key>CFBundlePackageType</key>
     <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
+    <string>0.8.14</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleURLTypes</key>
@@ -27,8 +27,8 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>expoapp</string>
-          <string>com.deeeed.designdemo</string>
+          <string>siteeduidemo</string>
+          <string>net.siteed.designdemo</string>
         </array>
       </dict>
     </array>
