--- a/examples/designdemo/android/app/src/main/AndroidManifest.xml
+++ b/examples/designdemo/android/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="expoapp"/>
-        <data android:scheme="com.deeeed.expoapp"/>
+        <data android:scheme="siteeduidemo"/>
+        <data android:scheme="net.siteed.designdemo"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
