--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.1",
   "main": "src/index",
   "scripts": {
-    "start": "expo start --dev-client --port 7765",
-    "android": "expo run:android --port 7765",
-    "ios": "expo run:ios --port 7765  --device",
-    "web": "expo start --web --port 7765"
+    "start": "NODE_ENV=development expo start --dev-client --port 7765",
+    "android": "NODE_ENV=development expo run:android --port 7765",
+    "ios": "NODE_ENV=development expo run:ios --port 7765  --device",
+    "web": "NODE_ENV=development expo start --web --port 7765",
+    "open:android": "open -a \"Android Studio\" ./android",
+    "open:ios": "open -a \"Xcode\" ./ios"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -14,7 +16,7 @@
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
-    "expo": "^51.0.20",
+    "expo": "^51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
@@ -28,7 +30,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.11"
@@ -39,6 +41,8 @@
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "private": true
