--- a/examples/loggerdemo/package.json
+++ b/examples/loggerdemo/package.json
@@ -3,11 +3,11 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "NODE_ENV=development expo start",
+    "start": "NODE_ENV=development expo start --port 7761",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
-    "ios": "NODE_ENV=development expo start --ios",
-    "web": "NODE_ENV=development expo start --web",
+    "ios": "NODE_ENV=development expo start --ios --port 7761",
+    "web": "NODE_ENV=development expo start --web --port 7761",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -25,7 +25,7 @@
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.15",
-    "@siteed/react-native-logger": "workspace:^",
+    "@siteed/react-native-logger": "0.7.1",
     "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
