--- a/packages/react-native-logger/tsconfig.build.json
+++ b/packages/react-native-logger/tsconfig.build.json
@@ -1,5 +1,11 @@
 
 {
   "extends": "./tsconfig",
-  "exclude": ["example"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "./src/**/*.test.tsx",
+    "./src/**/*.test.ts",
+    "./src/**/*.stories.tsx",
+  ]
 }
