feat: add gif to readme for npm

--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/react-native-logger",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "A simple yet powerful logging library for React Native applications, compatible with the debug package and supporting persistent log history.",
   "main": "dist/logger.js",
   "module": "dist/logger.js",
@@ -10,6 +10,7 @@
   "files": [
     "dist",
     "package.json",
+    "docs",
     "README.md"
   ],
   "scripts": {
