--- a/examples/designdemo/ios/designplayground.xcodeproj/xcshareddata/xcschemes/designplayground.xcscheme
+++ b/examples/designdemo/ios/designplayground.xcodeproj/xcshareddata/xcschemes/designplayground.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "designdemo.app"
-               BlueprintName = "designdemo"
-               ReferencedContainer = "container:designdemo.xcodeproj">
+               BuildableName = "designplayground.app"
+               BlueprintName = "designplayground"
+               ReferencedContainer = "container:designplayground.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "designdemoTests.xctest"
-               BlueprintName = "designdemoTests"
-               ReferencedContainer = "container:designdemo.xcodeproj">
+               BuildableName = "designplaygroundTests.xctest"
+               BlueprintName = "designplaygroundTests"
+               ReferencedContainer = "container:designplayground.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "designdemo.app"
-            BlueprintName = "designdemo"
-            ReferencedContainer = "container:designdemo.xcodeproj">
+            BuildableName = "designplayground.app"
+            BlueprintName = "designplayground"
+            ReferencedContainer = "container:designplayground.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "designdemo.app"
-            BlueprintName = "designdemo"
-            ReferencedContainer = "container:designdemo.xcodeproj">
+            BuildableName = "designplayground.app"
+            BlueprintName = "designplayground"
+            ReferencedContainer = "container:designplayground.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
