--- a/examples/designdemo/ios/designplayground/Info.plist
+++ b/examples/designdemo/ios/designplayground/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>designdemo</string>
+    <string>design-playground</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,8 +27,8 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>siteeduidemo</string>
-          <string>net.siteed.designdemo</string>
+          <string>designplayground</string>
+          <string>net.siteed.designplayground</string>
         </array>
       </dict>
     </array>
