--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -42,17 +42,18 @@
     "@babel/eslint-parser": "^7.24.8",
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^29.5.12",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.0.5",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.3",
     "typescript": "^5.0.2"
   }
 }
