--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.0.5",
     "rimraf": "^6.0.1",
