--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -22,7 +22,7 @@
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
-    "@siteed/react-native-logger": "workspace:^",
+    "@siteed/react-native-logger": "0.8.2",
     "expo": "^51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
@@ -46,7 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
     "@types/react": "~18.2.45",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
@@ -55,5 +55,12 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
+  "resolutions": {
+    "@siteed/react-native-logger": "0.8.2"
+  },
+  "nohoist": [
+    "**/@siteed/react-native-logger",
+    "**/@siteed/react-native-logger/**"
+  ],
   "private": true
 }
