--- a/examples/loggerdemo/package.json
+++ b/examples/loggerdemo/package.json
@@ -24,7 +24,7 @@
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.15",
-    "@siteed/react-native-logger": "0.7.1",
+    "@siteed/react-native-logger": "workspace:^",
     "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
