docs: update logger docs

--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -22,7 +22,7 @@
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
-    "@siteed/react-native-logger": "0.8.2",
+    "@siteed/react-native-logger": "workspace:^",
     "expo": "^51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
