--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "**/.pnp.*": true,
     "**/node_modules": true,
     "**/dist": true,
+    "**/build": true,
   },
   "files.exclude": {
     "**/.git": true,
@@ -14,6 +15,7 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     "**/dist": true,
+    "**/build": true,
   },
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "typescript.tsdk": "node_modules/typescript/lib",
