@siteed/react-native-logger 0.9.2 (#9)
* feat(design-system): bump version $version

* feat: Update logger core to set namespaces and improve debug settings initialization

* feat: set jest for testing

* feat: Update logger configuration to use setLoggerConfig instead of enable/disable functions

* feat: updat test and enable reset logger environment

* feat: upgrade logger

* feat: bump for future release

* feat: improve testing

* docs: update logger docs

---------

Co-authored-by: abretonc7s <arthur.breton@consensys.net>

--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -46,7 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
     "@types/react": "~18.2.45",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
@@ -55,5 +55,12 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
+  "resolutions": {
+    "@siteed/react-native-logger": "0.8.2"
+  },
+  "nohoist": [
+    "**/@siteed/react-native-logger",
+    "**/@siteed/react-native-logger/**"
+  ],
   "private": true
 }
