--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 **/node_modules/
 node_modules/
 
+
+# Coverage reports
+**/coverage/
+**/.nyc_output/
+**/*.lcov
+
 #!.yarn/cache
 .pnp.*
 **/dist/
