feat: themed modal element

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -34,7 +34,8 @@
     "noUnusedLocals": false,
     "strict": true,
     "target": "esnext",
-    "verbatimModuleSyntax": false
+    "verbatimModuleSyntax": false,
+    "types": ["jest", "node"]
   },
   "exclude": [
     "dist",
