--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -77,16 +77,17 @@
     "@rollup/plugin-typescript": "^8.3.3",
     "@siteed/react-native-logger": "^0.9.3",
     "@size-limit/preset-big-lib": "^11.1.2",
-    "@storybook/addon-essentials": "^8.2.7",
-    "@storybook/addon-interactions": "^8.2.7",
-    "@storybook/addon-links": "^8.2.7",
-    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/addon-react-native-web": "^0.0.24",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.2.7",
-    "@storybook/react": "^8.2.7",
-    "@storybook/react-webpack5": "^8.2.7",
-    "@storybook/test": "^8.2.7",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-webpack5": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/test-runner": "^0.19.1",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react-native": "^12.4.4",
     "@types/eslint": "^8",
@@ -112,6 +113,7 @@
     "expo-localization": "~15.0.3",
     "expo-module-scripts": "3.4.2",
     "gh-pages": "^6.1.1",
+    "jest": "^29.7.0",
     "os-browserify": "^0.3.0",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
@@ -139,7 +141,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "size-limit": "^11.1.2",
-    "storybook": "^8.2.7",
+    "storybook": "^8.2.9",
     "tty-browserify": "^0.0.1",
     "typescript": "~5.3.3",
     "typescript-eslint": "^7.4.0"
