--- a/packages/design-system/tsconfig.build.json
+++ b/packages/design-system/tsconfig.build.json
@@ -1,6 +1,9 @@
 
 {
   "extends": "./tsconfig",
+  "compilerOptions": {
+    "types": ["node"]
+  },
   "include": ["src"],
   "exclude": ["**/*.stories.tsx","**/*.test.tsx"],
 }
