--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -40,7 +40,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.11"
+    "react-native-web": "^0.19.11",
+    "testingui": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
