feat: use reanimated for accordion

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -84,10 +84,12 @@
     "@storybook/addon-react-native-web": "^0.0.24",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.2.9",
+    "@storybook/jest": "^0.2.3",
     "@storybook/react": "^8.2.9",
     "@storybook/react-webpack5": "^8.2.9",
     "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "^0.19.1",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react-native": "^12.4.4",
     "@types/eslint": "^8",
