feat: slider component

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -45,6 +45,7 @@
     "@expo/vector-icons": "*",
     "@gorhom/bottom-sheet": "*",
     "@react-native-async-storage/async-storage": "*",
+    "@react-native-community/slider": "*",
     "@react-navigation/native": "*",
     "@siteed/react-native-logger": "*",
     "expo": "*",
