--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -18,7 +18,8 @@
     "jsx": "react",
     "allowJs": false,
     "lib": [
-      "esnext"
+      "esnext",
+      "dom"
     ],
     "module": "esnext",
     "moduleResolution": "node",
