--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -28,6 +28,7 @@
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
     "@gorhom/bottom-sheet": "^5.0.0-alpha.11",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
