feat: sync darkmode with system  (#14)
* feat: wip

* feat: stacking modal and drawers

* feat(design-system): bump version 0.29.0

* feat: add options to disable extra params in logs

* feat(react-native-logger): bump version 0.11.0

* feat: cleanup

* feat(design-system): bump version 0.29.1

* feat: wip

* feat(design-system): bump version 0.29.2

* feat: synchronized darkmode with system and debug statusbar background

---------

Co-authored-by: abretonc7s <arthur.breton@consensys.net>

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/design-system",
-  "version": "0.28.16",
+  "version": "0.29.2",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
   "repository": {
@@ -67,7 +67,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@evilmartians/lefthook": "^1.6.7",
     "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "5.0.0-alpha.11",
+    "@gorhom/bottom-sheet": "^5",
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
