--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/react-native-logger",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "A simple yet powerful logging library for cross platform applications, supporting persistent log history.",
   "main": "dist/logger.js",
   "module": "dist/logger.js",
@@ -16,8 +16,8 @@
     "clean": "rimraf ./dist",
     "build": "yarn build:tsc",
     "build:clean": "yarn clean && yarn build",
-    "build:tsc": "tsc",
-    "typecheck": "tsc --noEmit",
+    "build:tsc": "tsc --project tsconfig.build.json",
+    "typecheck": "tsc --noEmit --project tsconfig.build.json",
     "codecov": "codecov",
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -46,7 +46,7 @@
     "@babel/eslint-parser": "^7.24.8",
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "codecov": "^3.8.3",
