feat: rename to publisher

--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@siteed/release-it",
+  "name": "@siteed/publisher",
   "version": "0.1.0",
   "description": "Flexible release management tool for JavaScript/TypeScript monorepos",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
@@ -7,12 +7,12 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/deeeed/universe",
-    "directory": "packages/release-it"
+    "directory": "packages/publisher"
   },
   "main": "dist/src/index.js",
   "module": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
-  "bin": "./dist/bin/release-it.js",
+  "bin": "./dist/bin/publisher.js",
   "files": [
     "dist",
     "templates",
@@ -29,7 +29,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
-    "release": "node ./dist/bin/release-it.js release release-it",
+    "release": "node ./dist/bin/publisher.js publish",
     "prepare": "husky install"
   },
   "dependencies": {
