--- a/packages/publisher/tsconfig.json
+++ b/packages/publisher/tsconfig.json
@@ -27,6 +27,7 @@
     "src/**/*",
     "bin/**/*",
     "publisher.config.ts",
+    ".publisher/**/*",
     "package.json",
     "jest.config.ts",
     "jest.setup.ts"
